# so2x-harness

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  harness.yaml  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: cli-reference.md  codex-claude-parity-release-note-draft.ko.md  codex-claude-parity-release-note-draft.md  preset-guide.md  release-checklist.md
docs/meta-harness/: _state.json  harness-spec.md  interview-schema.md  stage-contracts.md
examples/: project-config.general.json  project-config.nextjs.json
learnings/: entries.jsonl
materials/: checklist.md
materials/examples/: api-example.md  nextjs-example.md
schemas/: config.schema.json  manifest.schema.json  skill-catalog.schema.json  spec.schema.json  state.schema.json
scripts/: apply.py  doctor.py  meta_state.py  runtime.py  update.py
scripts/cli/: main.py
scripts/lib/: checksum.py  install.py  manifest.py  markers.py  platform_map.py  project_profiles.py  render.py
templates/claude/: CLAUDE.md
templates/codex/: AGENTS.md
templates/minimal/: CLAUDE.md  harness.json  spec.json
templates/shared/: AGENTS.md
tests/: conftest.py
tests/integration/: test_apply.py  test_auto_preset_detection.py  test_cli_skill_recommendations.py  test_cli_version.py  test_codex_skill_content.py  test_codex_skill_parity.py  test_doctor.py  test_doctor_drift.py  test_enabled_skills_generation.py  test_execution_status.py  test_feedback_and_run_status.py  test_generated_schema_contracts.py  test_install_ps1_apply_args.py  test_install_ps1_bootstrap.py  test_install_ps1_platform_selection.py  test_install_ps1_with_cli.py  test_install_sh_platform_selection.py  (+12 more)
(+76 files in other folders)
