[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "so2x-cli"
version = "0.6.2"
description = "CLI tool for so2x-harness spec engine"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.0",
    "PyYAML>=6.0",
]

[project.scripts]
so2x-cli = "cli.main:main"

[tool.setuptools.package-dir]
"" = "scripts"

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["cli*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.coverage.run]
parallel = true
source = ["scripts"]
patch = ["subprocess"]

[tool.coverage.paths]
source = [
    "scripts",
    "*/so2x-harness/scripts",
]
